0.6.1版本更新，文档站同步内容